# MAVRouter

./: .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Cargo.toml  PERFORMANCE.md  README.md  ci_config.toml  clippy.toml  release.toml  router.pid
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: README.md  audit.yml  ci.yml  publish.yml
benches/: clone_benchmark.rs  fanout_bench.rs  filter_bench.rs  pipeline_benchmark.rs  routing_benchmark.rs  routing_contention_bench.rs
config/: README.md  mavrouter.toml  mavrouter_filter_allow.toml  mavrouter_filter_block.toml  mavrouter_stress.toml  mavrouter_test.toml
examples/: basic_router.rs  simple_router.rs
scripts/: check-changelog.sh  check-no-hardcoded-ports.sh  detect_fc_serial.sh  full_hw_validation.sh  pre_release_check.sh
src/: config.rs  dedup.rs  endpoint_core.rs  error.rs  filter.rs  framing.rs  high_level.rs  lib.rs  lock_helpers.rs  main.rs  main_stats_server.rs  mavlink_utils.rs  orchestration.rs  router.rs  routing.rs  run_loop.rs  stats.rs
src/config/: defaults.rs  endpoint.rs  general.rs  merge.rs  tests.rs  validate.rs
src/config/tests/: endpoints.rs  merge.rs  validation.rs
src/dedup/: tests.rs
src/endpoint_core/: backoff.rs  spawn_context.rs  stats.rs  stream_loop.rs  tests.rs
src/endpoint_core/tests/: backoff.rs  helpers.rs  incoming.rs  lagged.rs  loopback.rs  outgoing.rs  stats.rs  timestamp.rs
src/endpoints/: serial.rs  tcp.rs  tlog.rs  udp.rs
src/endpoints/tlog/: tests.rs
src/endpoints/udp/: tests.rs
src/filter/: tests.rs
src/framing/: tests.rs
src/orchestration/: shutdown.rs  stats_history.rs  stats_reporter.rs  stats_server.rs  supervisor.rs  tests.rs  updater.rs
src/routing/: groups.rs  shard.rs  stats.rs  table.rs  tests.rs  update.rs
src/routing/tests/: basic.rs  groups.rs  stress.rs
src/run_loop/: tests.rs
tests/: integration_test.rs  message_filtering.rs  network_test.rs  public_api_test.rs  router_integration.rs  routing_contention_test.rs  routing_edge_cases.rs  routing_test.rs  shutdown_test.rs  smart_routing_test.rs  stress_test.rs  target_extraction_test.rs  tlog_test.rs  unit_integration.rs  unit_test.rs
tests/integration/: README.md  _test_helpers.py  chaos_test.py  fuzz_test.py  loop_stress_test.py  mixed_load_test.py  requirements.txt  stress_test.py  throughput_test.py  verify_config_dir.py  verify_endpoint_stats.py  verify_filtering.py  verify_hardware.py  verify_ipv6.py  verify_multiclient.py  verify_params.py  verify_sighup.py  verify_sighup_invalid.py  verify_sniffer.py  verify_tlog.py  verify_tx.py  verify_udp.py
