[package]
name = "mavrouter"
version = "0.1.4"
edition = "2021"
authors = ["Fang Luo <luofang@luofang.org>"]
description = "MAVLink router"
license = "AGPL-3.0"
repository = "https://github.com/luofang34/mavrouter-rs"
homepage = "https://github.com/luofang34/mavrouter-rs"
documentation = "https://docs.rs/mavrouter"
readme = "README.md"
keywords = ["mavlink", "router", "telemetry", "uav", "embedded"]
categories = ["network-programming", "embedded", "aerospace"]
rust-version = "1.70"

[lib]
name = "mavrouter"
path = "src/lib.rs"

[[bin]]
name = "mavrouter"
path = "src/main.rs"

[dependencies]
parking_lot = "0.12"
tokio = { version = "1.36", features = ["rt-multi-thread", "net", "sync", "time", "io-util", "signal", "macros", "fs"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mavlink = "0.12"
anyhow = "1.0"
futures = "0.3"
tokio-serial = "5.4"
thiserror = "1.0"
tokio-util = { version = "0.7", features = ["codec", "net"] }
bytes = "1.0"
ahash = "0.8"
dashmap = "5.5"
memchr = "2.7"
async-broadcast = "0.7"

[dev-dependencies]
serial_test = "3.0"
criterion = "0.5"
num_cpus = "1.16"

[[bench]]
name = "routing_benchmark"
harness = false

[lints.rust]
unsafe_code = { level = "forbid", priority = -1 }

[lints.clippy]
unwrap_used = { level = "deny", priority = -1 }
expect_used = "deny"
panic = "deny"
todo = "warn"
