[package]
name = "mavrouter"
version = "0.1.5"
edition = "2021"
authors = ["Fang Luo <luofang@luofang.org>"]
description = "MAVLink router"
license = "AGPL-3.0"
repository = "https://github.com/luofang34/MAVRouter"
homepage = "https://github.com/luofang34/MAVRouter"
documentation = "https://docs.rs/mavrouter"
readme = "README.md"
keywords = ["mavlink", "router", "telemetry", "uav", "embedded"]
categories = ["network-programming", "embedded", "aerospace"]
rust-version = "1.85"

[lib]
name = "mavrouter"
path = "src/lib.rs"

[[bin]]
name = "mavrouter"
path = "src/main.rs"

[dependencies]
arc-swap = "1.7"
parking_lot = "0.12"
tokio = { version = "1.36", features = ["rt-multi-thread", "net", "sync", "time", "io-util", "signal", "macros", "fs"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mavlink = "0.12"
anyhow = "1.0"
futures = "0.3"
tokio-serial = "5.4"
thiserror = "1.0"
tokio-util = { version = "0.7", features = ["codec", "net"] }
bytes = "1.0"
ahash = { version = "0.8", features = ["serde"] }
dashmap = "5.5"
memchr = "2.7"

[dev-dependencies]
criterion = "0.5"
num_cpus = "1.16"
tempfile = "3.10"
# `test-util` is required for `#[tokio::test(start_paused = true)]` in unit
# tests that assert timeout behaviour without burning real wall-clock time.
tokio = { version = "1.36", features = ["test-util"] }
# `no-env-filter` is required for integration tests — otherwise tracing-test
# defaults to filtering by the test crate name and drops logs emitted from
# inside `mavrouter::*`, which is exactly what `shutdown_test.rs` asserts on.
tracing-test = { version = "0.2", features = ["no-env-filter"] }

[features]
# Exposes internal modules as `pub` for benchmarks and any other in-crate
# tooling that needs direct access to implementation details. Never enable
# this outside of `[[bench]]` targets — it bypasses the public-API
# contract the rest of the crate is built around.
_internal = []

[[bench]]
name = "routing_benchmark"
harness = false
required-features = ["_internal"]

[[bench]]
name = "filter_bench"
harness = false
required-features = ["_internal"]

[[bench]]
name = "clone_benchmark"
harness = false
required-features = ["_internal"]

[[bench]]
name = "fanout_bench"
harness = false
required-features = ["_internal"]

[[bench]]
name = "routing_contention_bench"
harness = false
required-features = ["_internal"]

[[bench]]
name = "pipeline_benchmark"
harness = false
required-features = ["_internal"]

[lints.rust]
unsafe_code = { level = "forbid", priority = -1 }

[lints.clippy]
# === DENY tier ===
# Note: clippy restriction lints cannot use "forbid" because derive macros
# (e.g. clap's #[derive(Parser)]) emit #[allow(clippy::restriction)] which
# conflicts with forbid. Use "deny" instead — CI enforces via -D warnings.
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
exit = "deny"
unwrap_used = { level = "deny", priority = -1 }
expect_used = "deny"
panic = "deny"
unreachable = "deny"
print_stdout = "deny"
print_stderr = "deny"
indexing_slicing = "deny"
arithmetic_side_effects = "deny"
cast_possible_truncation = "deny"
cast_sign_loss = "deny"
# Ban `anyhow::Error` (and friends) in this crate — use `RouterError` with
# explicit `.map_err()` instead. The list lives in `clippy.toml`.
disallowed_types = "deny"
# Ban `let _ = some_must_use_value;` — discarding errors silently has bitten us
# (shutdown hangs, missed remove_file failures). Either handle the Result or
# surface the discard explicitly via `.ok()` / `let _ = ...; // reason`.
let_underscore_must_use = "deny"
# Ban `let _ = some_future;` — dropping an unawaited future is almost always a bug.
let_underscore_future = "deny"
# Catch non-Send / parking_lot lock guards being held across .await points.
# A single violation can wedge a tokio worker, so treat it as an error, not a warning.
await_holding_lock = "deny"
